corrected CSS issue locking the inputs and toast displaying behind elements

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 form {
     margin-bottom: 20px;
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 label, input {
@@ -122,6 +122,7 @@ body, html {
     position: fixed;
     top: 30px;
     right: 20px;
+    z-index: 9999;
   }
   .notifications :where(.toast, .column) {
     display: flex;
